...
                    android:layout_marginRight="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:orientation="vertical">


                    <edu.capella.mobile.android.widgets.CPEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_filled_rounded_gray"
                        android:ems="10"
                        android:focusableInTouchMode="true"
                        android:hint="@string/email"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:background="@drawable/white_filled_rounded_gray"
                        android:orientation="horizontal">

                        <edu.capella.mobile.android.widgets.CPEditText
                            android:id="@+id/txtPassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"

                            android:focusableInTouchMode="true"
...
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_15dp"

                    android:orientation="vertical">

                    <edu.capella.mobile.android.widgets.CPTextView
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45dp"
                        android:background="@drawable/default_button_primary"
                        android:gravity="center"
                        android:contentDescription="@string/ada_login_button"
                        android:text="@string/login"
...
