...
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profileBaseLayout"
        android:background="@drawable/drawer_ripple"
        android:orientation="vertical">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
