...
            android:text="@string/id_card" />

    </com.google.android.material.tabs.TabLayout>


    <edu.capella.mobile.android.widgets.CViewPager
        android:id="@+id/pagerForContainer"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


        </LinearLayout>
...
